# PowerPathFinder

./: .env.debug  .env.dev  .gitignore  .gitmodules  ModelConceptual.drawio  ONBOARDING.md  README.md  ServiceDefinition.md  deploy-checklist.md  docker-compose.build.yml  docker-compose.development.yml  docker-compose.macos.yml  docker-compose.yml
.github/workflows/: copy-compose.yml  deploy-to-ec2.yaml  deploy-to-ec2.yml  publish-ppf  python-publish.yml
ppf/: README.md  pyproject.toml
ppf/common/models/: __init__.py  achievement.py  calendar.py  charger.py  fcm.py  payment.py  route.py  user.py  valuation.py
scripts/: build.sh  clean-up.sh  clean.bat  clean.sh  compose-up.bat  compose-up.sh  dev-db.sh  set-up.sh
