[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ppf"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "Django>=5.0",
]
readme = "README.md"
long_description_content_type = "text/markdown"

[metadata]
description = "PowerPathFinder is a powerful path finding tool."
license = "MIT"
author = "Your Name"
author-email = "yourname@example.com"
